suppress false line break bug with `white-space:norwrap` style

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -40,6 +40,9 @@ foreignObject {
   -webkit-user-select: none;
   user-select: none;
   padding: 0px;
+
+  /* ADHOC (改行対策) */
+  white-space: nowrap;
 }
 
 
